# E-commerce-Agent

./: .env.example  Makefile  pyproject.toml  电商公司agent集群设计架构.txt
infrastructure/: docker-compose.yml
infrastructure/docker/: Dockerfile.agent  Dockerfile.operations
infrastructure/k8s/: configmap.yaml  namespace.yaml  secrets.yaml
infrastructure/k8s/customer-service/: deployment.yaml
infrastructure/k8s/gateway/: deployment.yaml
infrastructure/monitoring/: alertmanager.yml  opentelemetry-collector.yml  prometheus.yml
infrastructure/monitoring/grafana/dashboards/: agent-cluster.json
scripts/: health_check.py  init_db.py  seed_knowledge.py
services/content/: main.py  pipeline.py
services/customer-service/: escalation.py  main.py  router.py  sse.py
services/customer-service/handlers/: __init__.py  after_sale.py  complaint.py  order.py  product.py
services/gateway/: auth.py  main.py  rate_limit.py
services/gateway/routes/: proxy.py
services/live/: main.py
services/office/: graph.py  main.py  oa_adapter.py
services/operations/: agent.py  main.py
services/operations/tasks/: __init__.py  daily_report.py  weekly_analysis.py
services/operations/tools/: __init__.py  competitor.py  listing.py  pricing.py  report.py  sales_data.py
services/product-display/: graph.py  image_gen.py  main.py  models.py  prompts.py  storage.py
services/supervisor/: graph.py  main.py  task_board.py
services/telemarketing/: graph.py  main.py
shared/: __init__.py  config.py  exceptions.py  logging.py  pyproject.toml  tracing.py
shared/eventbus/: __init__.py  events.py  redis_streams.py
shared/knowledge/: __init__.py  retrieval.py  vector_store.py
shared/memory/: __init__.py  store.py
shared/models/: __init__.py  base.py  customer.py  task.py
shared/tools/: __init__.py  crm.py  notification.py  order.py  platform.py  product.py  registry.py
tests/: conftest.py
tests/unit/: test_eventbus.py  test_tools.py
