[project]
name = "agent-cluster-shared"
version = "0.1.0"
description = "Agent Cluster 共享层"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "openai>=1.58.0",
    "anthropic>=0.40.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "prometheus-client>=0.21.0",
    "tenacity>=9.0.0",
    "httpx>=0.28.0",
]
